syntax = "proto3";

package v1.model;

option go_package = "github.com/FormantIO/genproto/go/v1/model";


message Image {
    // e.g. "image/png" for png images.
    string content_type = 1;
    oneof data {
        // Absolute path to a file on the local filesystem
        string url = 2;
        // 2MB limit
        bytes raw = 3;
    }
}

message PointCloud {
    oneof data {
        // Absolute path to a file on the local filesystem
        string url = 1;
        // 2MB limit
        bytes raw = 2;
    }
}